--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,15 @@
         <h2 class="h5 mb-0">Summary</h2>
       </div>
       <div class="card-body">
-        <pre id="summaryText" class="fs-5 violet-text"></pre>
+  <div
+    id="summaryBox"
+    class="violet-bg-light border-violet rounded p-3 overflow-auto"
+  >
+    <pre
+      id="summaryText"
+      class="fs-5 violet-text mb-0 text-wrap"
+    ></pre>
+        </div>
         <button id="downloadTxtBtn" class="btn btn-outline-violet mt-3">
           Download as TXT
         </button>
